# Coling

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/coling/: MainActivity.kt  NativeBridge.kt
app/src/main/java/com/example/coling/data/: ColingDatabase.kt  Project.kt  ProjectViewModel.kt
app/src/main/java/com/example/coling/ui/screens/: ColorScreen.kt  DeliverScreen.kt  EditScreen.kt  MediaScreen.kt
app/src/main/java/com/example/coling/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/coling/utils/: FileUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
docs/: architecture.md  build_instructions.md
native/: CMakeLists.txt
native/core/: color_engine.cpp  color_engine.h
native/jni/: coling-jni.cpp
